<resources>
    <string name="app_name">Memory</string>

    <!-- Main Menu Activity -->
    <string name="main_menu_title_shop">Shop</string>
    <string name="main_menu_title_challenge">Challenge</string>
    <string name="main_menu_title_setting">Setting</string>

    <!-- Game mode Activity-->
    <string name="choose_game_mode">Choose your game mode</string>
    <string name="career">Career</string>
    <string name="race_against_time">Against time</string>
    <string name="sudden_death">Sudden death</string>
    <string name="survival">Survival</string>

    <!-- Shop Activity -->
    <string name="title_shop_activity">Shop</string>
    <string name="get_coin_shop_activity">Get Coins</string>
    <string name="get_bonus_shop_activity">Get Bonus</string>
    <string name="shop_dont_have_money">You do not have enough coins</string>

    <!-- Challenge Activity -->
    <string name="title_challenge_activity">Challenge</string>
    <string name="collect_stars">Collect {0} stars</string>
    <string name="end_level">End level {0}</string>
    <string name="end_level_without_bonus">End level {0} without using bonus</string>
    <string name="end_level_with_three_stars">End level {0} with 3 stars</string>
    <string name="end_level_without_fail">End level {0} without fail</string>

    <!-- Credits -->
    <string name="title_credits_activity">Credits</string>

    <!-- Setting Activity -->
    <string name="title_setting_activity">Settings</string>
    <string name="setting_son">Sound</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_report_bug">Report a bug</string>
    <string name="setting_credits">Credits</string>
    <string name="setting_rate_us">Rate us</string>
    <string name="setting_languages">Languages</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_no">No</string>
    <string name="setting_langue">EN</string>

    <!-- Game Activity -->
    <string name="label_level">Level</string>
    <string name="label_game_hit">hit</string>
    <string name="label_game_hits">hits</string>

    <!-- End Level View -->
    <string name="label_bestscore">Best score : </string>
    <string name="label_score">Score : </string>
    <string name="label_btn_revive">Revive</string>
    <string name="label_btn_again">Again</string>
    <string name="label_btn_menu">Menu</string>
    <string name="label_btn_next">Next</string>
    <string name="label_btn_more_coin">Double your reward</string>

    <!-- Pause view -->
    <string name="label_btn_continue">Continue</string>

    <!-- Game over View -->
    <string name="label_game_over_title">Game Over</string>
    <string name="label_btn_more_life">Earn an extra life</string>

    <!-- Finish all level View -->
    <string name="label_finish_all_level_title">Congratulations</string>
    <string name="label_finiash_all_level_subtitle">You won all levels</string>
    <string name="label_finish_all_level_bonus_coin">Earn 200 coins</string>

    <!-- Tutorial View -->
    <string name="label_tutorial_title">Tutorial</string>
    <string name="label_tutorial_step_1">Memorize\n the cards</string>
    <string name="label_tutorial_step_2">Click on\nthe first card</string>
    <string name="label_tutorial_step_3">Click on\nthe second card</string>
    <string name="label_tutorial_step_4">You do not remember ?\n Use a bonus !</string>
    <string name="label_tutorial_step_5">Finish the level</string>
    <string name="label_tutorial_step_6">Congratulations\n Tap to start</string>

    <!-- Unlock challenge View -->
    <string name="unlock_new_challenge">New challanges unlocked</string>
    <string name="get_award_new_challenge">Get award</string>

    <!-- Rate Popup View -->
    <string name="rate_popup_title">Do you like ? \nPlease, rate the application:</string>
    <string name="rate_popup_never">Never</string>
    <string name="rate_popup_later">Later</string>
    <string name="rate_popup_close">Close</string>
    <string name="rate_popup_subtitle">Thank you!</string>
</resources>
