<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softcaze.memory.activity.SettingActivity">

    <include
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/activity_background"/>

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_header"/>

    <include
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/activity_footer"/>

    <LinearLayout
        android:id="@+id/linear_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/whiteColor"
            android:fontFamily="@font/roof_runners_active"
            android:textSize="20sp"
            android:padding="5dp"
            android:paddingRight="2dp"/>

        <ImageView
            android:id="@+id/img_coin"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@drawable/coin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/linear_coin"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/whiteColor"
            android:fontFamily="@font/roof_runners_active"
            android:textSize="20sp"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/img_bonus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@drawable/eyes_bonus"/>
    </LinearLayout>

    <ScrollView
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- SOUND -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/son"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_son"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/volume_ok"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_son"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_son"/>
                <TextView
                    android:id="@+id/setting_son_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:paddingRight="20dp"
                    android:text="@string/setting_no"/>
            </RelativeLayout>

            <!-- NOTIFICATIONS -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_notifications"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/notification_ok"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_notifications"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_notifications"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:paddingRight="20dp"
                    android:text="@string/setting_no"/>
            </RelativeLayout>

            <!-- LANGUES -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_languages"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/language"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_languages"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_languages"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="16sp"
                    android:textColor="@color/whiteColor"
                    android:text="@string/setting_langue"/>
                <!-- <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/arrow_right_settings"/> -->
            </RelativeLayout>

            <!-- RATE US -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/rate_us"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_rate_us"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/star"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_rate_us"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_rate_us"/>
            </RelativeLayout>

            <!-- Credit -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/credits"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_credit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/img_credit"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_credit"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_credits"/>
            </RelativeLayout>

            <!-- Report a bug -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/report_bug"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_report_bug"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/send_button"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_report_bug"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_report_bug"/>
            </RelativeLayout>

            <!-- Version -->
            <RelativeLayout
                android:soundEffectsEnabled="false"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_bluedark">

                <ImageView
                    android:id="@+id/img_version"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_version"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:text="@string/app_name"/>
                <TextView
                    android:id="@+id/version_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/whiteColor"
                    android:fontFamily="@font/roof_runners_active"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:paddingRight="20dp"
                    android:text="1.0.0"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/whiteColor"
        android:text="@string/title_setting_activity"
        android:fontFamily="@font/roof_runners_active"
        android:textSize="@dimen/common_title_fontsize"
        android:layout_margin="@dimen/common_title_margin"/>

</RelativeLayout>
